Revision history for JSON-MaybeXS

 - ensure an old Cpanel::JSON::XS is upgraded if it is too old, as it will
   always be used in preference to JSON::XS

1.003002 - 2014-11-16
 - correctly fix boolean interoperability with older Cpanel::JSON::MaybeXS

1.003001 - 2014-11-13
 - fix boolean interoperability with older Cpanel::JSON::MaybeXS

1.003_000 - 2014-10-30
 - add :legacy tag to support legacy apps

1.002006 - 2014-10-22
 - add some additional test diagnostics, to help find bad version combinations
   of JSON backends

1.002005 - 2014-10-12
 - fix "can I haz XS?" logic precedence in Makefile.PL
 - added the ':all' export tag
 - removed dependency on Safe::Isa
 - repository moved to git://git.shadowcat.co.uk/p5sagit/JSON-MaybeXS.git

1.002004 - 2014-10-11
 - support use of PUREPERL_ONLY in Makefile.PL to avoid adding an XS
   dependency
 - new is_bool() interface

1.002003 - 2014-10-07
 - document how to use booleans

1.002002 - 2014-04-23
 - more metadata fiddling, to remove the Cpanel::JSON::XS dependency visible
   to static analyzers (the prequisites at install time remain unchanged)

1.002001 - 2014-04-23
 - fix installation on older perls with an older ExtUtils::MakeMaker
   (RT#94964)

1.002000 - 2014-04-22
 - Now also supports JSON::XS, when available: Cpanel::JSON::XS will only be
   installed when there is no XS backend already installed; Cpanel::JSON::XS
   will be used over JSON::XS when both are installed.

1.001000 - 2013-12-11
  - Add a constructor for people who want to forget how silly the JSON API is

1.000000 - 2013-05-22
  - Released on an unsuspecting world.